# mars-rover-demo

./: .gitignore  CLAUDE.md  Cargo.toml  README.md  mars_rover.gpr
crates/mars-rover-ada-link/: Cargo.toml  README.md  build.rs
crates/mars-rover-ada-link/src/: lib.rs
crates/mars-rover-core/: Cargo.toml  README.md
crates/mars-rover-core/src/: domain.rs  glyph.rs  lib.rs  sidecar.rs  sim.rs  tests.rs  world.rs
crates/mars-rover-core/src/domain/: robot.rs  terrain.rs
crates/mars-rover-core/src/domain/snapshots/: mars_rover_core__domain__robot__tests__robot_positions.snap
crates/mars-rover-headless/: Cargo.toml  README.md
crates/mars-rover-headless/src/: logger.rs  main.rs
crates/mars-rover-replay/: Cargo.toml  README.md
crates/mars-rover-replay/src/: main.rs
drill-arm/: drill-arm.FCStd
drill-arm/production/v1.0/: drill-arm-arm1.step  drill-arm-arm2.step  drill-arm-servo1_support.step  drill-arm-tool-head.step
simulator/: .gitignore  Cargo.toml  README.md  build.rs  rust-toolchain.toml
simulator/scripts/: test-replay-fixtures.sh
simulator/src/: console.rs  controller.rs  domain.rs  logger.rs  main.rs  replay_mode.rs  replay_source.rs  resource.rs  ribbon.rs  simulator.rs  tests.rs  visualizer.rs
simulator/src/domain/: basis.rs  collision.rs  environment.rs  robot.rs
simulator/src/domain/snapshots/: mars_rover__domain__environment__tests__obstacle.snap  mars_rover__domain__robot__tests__robot_all_wheel_steering@-0.8796459430051422.snap  mars_rover__domain__robot__tests__robot_all_wheel_steering@0.8796459430051422.snap  mars_rover__domain__robot__tests__robot_all_wheel_steering@0.snap  mars_rover__domain__robot__tests__robot_front_wheel_steering@-0.7853981633974483.snap  mars_rover__domain__robot__tests__robot_front_wheel_steering@0.7853981633974483.snap
simulator/tests/fixtures/: README.md  obstacle_close.csv  obstacle_close.golden  stationary.csv  stationary.golden  waypoint_single.csv  waypoint_single.csv.wpts  waypoint_single.golden
simulator_interface/: README.md
src/: README.md  proof-status.md  rover-advanced_servo_control.adb  rover-advanced_servo_control.ads  rover-arm_a_control.ads  rover-arm_b_control.ads  rover-autonomous.adb  rover-autonomous.ads  rover-estimation-common_lemmas.adb  rover-estimation-common_lemmas.ads  rover-estimation-predict_lemmas.adb  rover-estimation-predict_lemmas.ads  rover-estimation-update_lemmas.adb  rover-estimation-update_lemmas.ads  rover-estimation.adb  rover-estimation.ads  rover-gnc.adb  rover-gnc.ads  rover-mast_control.adb  rover-mast_control.ads  rover-path_following.adb  rover-path_following.ads  rover-remote_controlled.adb  rover-tasks.adb  rover-tasks.ads  rover.ads  rover_hal.ads
src/binding/: rover_hal.adb
src/device/: rover_hal-gui.adb  rover_hal.adb
