[package]
name = "mars-rover"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["animation", "bevy_asset", "bevy_core_pipeline", "bevy_debug_stepping", "bevy_gilrs", "bevy_gizmos", "bevy_gltf", "bevy_pbr", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "hdr", "multi-threaded", "png", "tonemapping_luts", "x11"] }
nalgebra = "0.33.2"
thiserror = "2.0.11"
once_cell = "1.20.3"
rand = { version = "0.9.0", features = ["thread_rng"] }
rand_chacha = "0.9.0"

[dev-dependencies]
approx = "0.5.1"
console = "0.15.10"
insta = "1.42.1"
pretty_assertions = "1.4.1"
rstest = "0.24.0"
textplots = "0.8.6"

[profile.dev]
opt-level = 1

[profile.dev.package."*"]
opt-level = 3
