[package]
name = "mars-rover"
version = "0.0.0"
edition = "2021"

[dependencies]
bevy = { version = "0.13.2", default-features = false, features = ["animation", "bevy_asset", "bevy_core_pipeline", "bevy_debug_stepping", "bevy_gilrs", "bevy_gizmos", "bevy_gltf", "bevy_pbr", "bevy_render", "bevy_scene", "bevy_sprite", "bevy_text", "bevy_ui", "bevy_winit", "default_font", "hdr", "multi-threaded", "png", "tonemapping_luts", "x11"] }
mars-rover-ada-link = { path = "../crates/mars-rover-ada-link" }
mars-rover-core = { path = "../crates/mars-rover-core" }
rand = { version = "0.9.0", features = ["thread_rng"] }
rand_chacha = "0.9.0"

[dev-dependencies]
approx = "0.5.1"
